[tool.poetry]
name = "publishing-gw"
version = "0.1.0"
description = ""
authors = ["Andi <andi@saerdnaer.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "publishing_gw"}]

[tool.poetry.scripts]
server = "publishing_gw.server:run"
dev    = "publishing_gw.server:dev"


[tool.ruff]
line-length = 100
target-version = "py311"
preview = true

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
paramiko = "^3.4.0"
requests = "^2.31.0"
python-multipart = "^0.0.9"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
